--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,8 @@
             ],
             "scripts": [
               "src/assets/js/sidebar.js"
-            ]
+            ],
+             "baseHref": "/EducaConnect/"
           },
           "configurations": {
             "production": {
@@ -47,8 +48,8 @@
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "20kb",
+                  "maximumError": "40kb"
                 }
               ],
               "outputHashing": "all"
